@@ -17,6 +17,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 
@@ -28,9 +29,9 @@ public class GlobalControllerAdvice extends ResponseEntityExceptionHandler {
                                                                   HttpHeaders headers,
                                                                   HttpStatus status, WebRequest request) {
         List<String> errors = ex.getBindingResult().getFieldErrors()
-                .stream().map(DefaultMessageSourceResolvable::getDefaultMessage).toList();
-        return new ResponseEntity<>(getBody(HttpStatus.NOT_FOUND, errors.toString()),
-                HttpStatus.NOT_FOUND);
+                .stream().map(DefaultMessageSourceResolvable::getDefaultMessage).collect(Collectors.toList());
+        return new ResponseEntity<>(getBody(HttpStatus.BAD_REQUEST, errors),
+                HttpStatus.BAD_REQUEST);
     }
 
     @Override
@@ -48,7 +49,7 @@ public class GlobalControllerAdvice extends ResponseEntityExceptionHandler {
                 HttpStatus.NOT_FOUND);
     }
 
-    private Map<Object, Object> getBody(HttpStatus status, String message) {
+    private Map<Object, Object> getBody(HttpStatus status, Object message) {
         Map<Object, Object> body = new LinkedHashMap<>();
         body.put("timestamp", Instant.now());
         body.put("status", status.value());
